# bot929-rust

./: .env.example  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: main.rs  prelude.rs
src/commands/: bot.rs
src/prelude/: error.rs  events.rs  utils.rs
