[package]
name = "bot929_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
tracing-subscriber = "0.3"
dotenv = "0.15.0"
mongodm = "0.9.1"
snafu = "0.7.5"
poise = "0.5.5"
anyhow = "1.0.72"
serde_json = "1.0.105"
